--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </p>
 
     <nav aria-label="Course resources">
-      <h2>Math 2203 Spring 2026</h2>
+      <h2>Math 2203 - Spring 2026</h2>
       <ul>
         <li>
           <a href="e1sample.html" aria-label="Sample Exam 1">
